# EagleEye

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
src/analysis/: README.md  brownout.py  can.py  util.py
src/parser/: README.md  log_parser.py
src/parsers/: util.py  wpilog_parser.py
src/tests/: tests.py  util.py
