[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eagleeye"
version = "0.1.0"
description = "FRC robot log analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["frc", "robotics", "wpilog", "datalog"]
dependencies = [
    "rich>=15.0.0",
]

[dependency-groups]
lint = [
    "pyright[nodejs]~=1.1.409",
    "ruff~=0.15.15",
]
test = [
    "pytest~=8.0",
    "pytest-asyncio~=1.3.0",
    "coverage~=7.13.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
]

[project.scripts]
eagleeye = "eagleeye.cli:main"

[project.urls]
Repository = "https://github.com/jsneer23/EagleEye"

# ---------------------------------------------------------------------------
# hatch
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["eagleeye"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "N",     # pep8-naming
    "S",     # flake8-bandit
    "B",    # flake8-bugbear (likely bugs and design issues)
    "I",    # isort (import ordering)
    "C4",     # flake8-comprehensions
    "TC",     # flake8-type-checking
    "UP",   # pyupgrade (modernise Python syntax)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "ASYNC",  # flake8-async
    "ANN",    # flake8-annotations
]
ignore = [
    "SIM108",  # ternary operator — often less readable in data-processing code
    "B007",    # loop variable not used in body — common in timestamp iteration
    "RUF001",  # en-dash in strings — intentional in human-readable output
    "RUF002",  # multiplication sign in docstrings — intentional
    "RUF003",  # multiplication sign in comments — intentional
    # These are recommended by Ruff if the formatter is to be used: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002"
]

fixable = ["ALL"]
unfixable = [
    "E501",   # Ruff suggests their own formatting
    "ERA"     # Leave commented-out code for reference purposes
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.per-file-ignores]
"eagleeye/cli.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# ---------------------------------------------------------------------------
# pyright
# ---------------------------------------------------------------------------

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportUnusedImport = true
reportUnusedVariable = true
reportUntypedFunctionDecorator = false
reportUnnecessaryTypeIgnoreComment = "warning"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
    "tests"
]
asyncio_default_fixture_loop_scope = "function"
